ranking ordenado y highlight funcional

--- a/style.css
+++ b/style.css
@@ -540,17 +540,6 @@ body#gameIA #message {
 
   /*----------------------------------------------- RANKING -----------------------------------------------*/
 
-body#ranking .exit {
-    font-size: 2rem;
-    padding: 10px;
-    background-color: #251934a7;
-    color: white;
-    border: none;
-    cursor: pointer;
-    width: 90px;
-    border-radius: 50px;
-}
-
 body#ranking {
     background-image: url("images/backgroundRanking.jpg");
     background-position: top;
@@ -561,6 +550,7 @@ body#ranking {
 
 body#ranking .rankingBox{
     margin:auto;
+    width: 85%;
 }
 
 body#ranking .rankingTitle{
@@ -576,7 +566,6 @@ body#ranking .rankingTable{
     border-collapse: collapse;
     border-radius: 12px;
     margin: auto;
-    text-align: center;
     color: #fcd4a7;
     font: 1.4em "Fira Sans", sans-serif;
     font-weight: bold;
@@ -617,13 +606,16 @@ body#ranking .rankingTable tbody tr:hover:nth-of-type(even) {
 body#ranking .pagination{
     margin-top: 30px;
     margin-bottom: 30px;
-    margin-left: 45vw;
+    text-align: center;
+
 }
 
 body#ranking .pagination a{
     padding: 14px;
+    margin: 8px;
     font: 1.4em "Fira Sans", sans-serif;
     font-weight: bold;
+    
 }
 
 body#ranking .pagination a.active {
@@ -639,6 +631,26 @@ body#ranking .pagination a:not(.active) {
 
 body#ranking .pagination a:hover:not(.active) {
     background-color: #fcd4a7;
+}
+
+body#ranking .exit {
+    font-size: 2rem;
+    padding: 10px;
+    background-color: #251934a7;
+    color: white;
+    border: none;
+    cursor: pointer;
+    width: 90px;
+    border-radius: 50px;
+}
+
+body#ranking .rankingTable tr.highlight{
+    background-color: #39284e;
+    font-weight: bold;
+}
+body#ranking .rankingTable tr.highlight:hover{
+    background-color: #b298dcd8;
+    font-weight: bold;
 }
 
 /*---------------------------------------- WIN ------------------------------------------------------*/  
