--- a/style.css
+++ b/style.css
@@ -42,14 +42,15 @@ body#index .landingPageRankingButton{
     color: #fcd4a7; 
     border-radius: 40px; 
     border-color: #fcc486;
-    padding: 10px;
+    padding: 10px 20px 10px 20px;
     margin: 0 20px 0 20px;
 }
 
 body#index .landingPageNewGameButton:hover,
 body#index .landingPageRankingButton:hover,
 body#index .landingPageRegisterButton:hover{
-    background-color: #57466bc9; 
+    background-color: #57466bc9;
+    
 }
 
 body#index .landingPageStartLinkBtn{
@@ -63,7 +64,7 @@ body#index .landingPageNewGameButton:disabled{
     border-radius: 40px; 
     border: 0;
     border-color: #fcc486;
-    padding: 10px;
+    padding: 10px 20px 10px 20px;
 }
 
 body#index .landingPageCenterButtons{
@@ -672,7 +673,7 @@ body#win {
 }
 
 body#win .winBox {
-    background-color: #232f5f8c;
+    background-color: #251934a7;
     border-collapse: collapse;
     border-radius: 12px;
     margin: auto;
@@ -718,12 +719,13 @@ body#win .winVictoryMsg{
 }
 
 body#win .winNewGameButton{
-    font: 2.4em "Fira Sans", sans-serif;
-    background-color: #434b71; 
+    font: 1.8em "Fira Sans", sans-serif;
+    background-color: #39284E; 
     color: #fcd4a7; 
     border-radius: 40px; 
     border-color: #fcc486;
-    padding: 10px;
+    padding: 10px 20px 10px 20px;
+    margin: 0 20px 0 20px;
 }
 
 body#win .winHomeBtnLink{
@@ -731,22 +733,23 @@ body#win .winHomeBtnLink{
 }
 
 body#win .winRankingButton{
-    font: 2.4em "Fira Sans", sans-serif;
-    background-color: #434b71; 
+    font: 1.8em "Fira Sans", sans-serif;
+    background-color: #39284E; 
     color: #fcd4a7; 
     border-radius: 40px; 
     border-color: #fcc486;
-    padding: 10px;
+    padding: 10px 20px 10px 20px;
+    margin: 0 20px 0 20px;
 }
 
 body#win .winRegisterButton{
-    font: 2em "Fira Sans", sans-serif;
-    background-color: #434b71; 
+    font: 1.8em "Fira Sans", sans-serif;
+    background-color: #39284E; 
     color: #fcd4a7; 
     border-radius: 40px; 
     border-color: #fcc486;
-    padding: 10px;
-    margin-top: 10px;
+    padding: 10px 20px 10px 20px;
+    margin: 0 20px 0 20px;
 }
 body#win .winScoreTitle{
     font: 3em "Fira Sans", sans-serif;
@@ -857,12 +860,13 @@ body#lose .loseMsg{
 }
 
 body#lose .loseNewGameButton, .loseRankingButton{
-    font: 2.4em "Fira Sans", sans-serif;
-    background-color: #6F2DBD; 
+    font: 1.8em "Fira Sans", sans-serif;
+    background-color: #39284E; 
     color: #fcd4a7; 
     border-radius: 40px; 
     border-color: #fcc486;
-    padding: 10px;
+    padding: 10px 20px 10px 20px;
+    margin: 0 20px 0 20px;
 }
 
 body#lose .loseHomeBtnLink{
@@ -870,13 +874,13 @@ body#lose .loseHomeBtnLink{
 }
 
 body#lose .loseRegisterButton{
-    font: 2em "Fira Sans", sans-serif;
-    background-color: #6F2DBD; 
+    font: 1.8em "Fira Sans", sans-serif;
+    background-color: #39284E; 
     color: #fcd4a7; 
     border-radius: 40px; 
     border-color: #fcc486;
-    padding: 10px;
-    margin-top: 10px;
+    padding: 10px 20px 10px 20px;
+    margin: 0 20px 0 20px;
 }
 body#lose .loseScoreTitle{
     font: 3em "Fira Sans", sans-serif;
