--- a/style.css
+++ b/style.css
@@ -716,6 +716,7 @@ body#win .imagenGiro:hover{
 body#win .winVictoryMsg{
     font: 4.0em "Fira Sans", sans-serif;
     font-weight: bold;
+    color: #EF5D3D;
 }
 
 body#win .winNewGameButton{
@@ -752,11 +753,11 @@ body#win .winRegisterButton{
     margin: 0 20px 0 20px;
 }
 body#win .winScoreTitle{
-    font: 3em "Fira Sans", sans-serif;
+    font: 2.4em "Fira Sans", sans-serif;
 }
 
 body#win .winScoreDesc{
-    font: 3em "Fira Sans", sans-serif;
+    font: 2.2em "Fira Sans", sans-serif;
 }
 
 
@@ -794,7 +795,7 @@ body#lose {
     background-repeat: no-repeat; 
     background-color: rgba(15, 44, 73, 0.811);
     filter: grayscale(100%); /* B/N */
-    animation: gameOverEffect 4s ease-in-out forwards; /* Color normal (quitra B y N)*/
+    animation: gameOverEffect 5s ease-in-out forwards; /* Color normal (quitra B y N)*/
 }
 
 body#lose .overlay {
@@ -803,7 +804,7 @@ body#lose .overlay {
     left: 0;
     width: 100%;
     height: 100%;
-    animation: overlayOut 10s ease-in-out forwards; /*Animacion suave del blanco y negro (forwards es para que no vuelva a verse en B/N)*/
+    animation: overlayOut 5s ease-in-out forwards; /*Animacion suave del blanco y negro (forwards es para que no vuelva a verse en B/N)*/
     z-index: 21;
     background-color :#1f1e20cf ;
 
@@ -883,11 +884,11 @@ body#lose .loseRegisterButton{
     margin: 0 20px 0 20px;
 }
 body#lose .loseScoreTitle{
-    font: 3em "Fira Sans", sans-serif;
+    font: 2.4em "Fira Sans", sans-serif;
 }
 
 body#lose .loseScoreDesc{
-    font: 3em "Fira Sans", sans-serif;
+    font: 2.2em "Fira Sans", sans-serif;
 }
 
 
