--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+/*que no puedas seleccionar las letras*/
+body#index,
+body#game,
+body#gameIA,
+body#lose,
+body#win,
+body#ranking{
+    user-select: none;
+}
+
 /*----------------------------------- INDEX ---------------------------------*/
 body#index{
     background-image: url("images/backgroundLandingPage.png");
@@ -299,6 +309,12 @@ body#gameIA .centerContainer #contenedorSpecialAttack img[data-selected="true"] 
     background-color: #b9faf8;
     border-radius: 16px;
     box-shadow: 0px 5px 15px 2px rgba(0, 0, 0, 0.20);
+}
+
+/* desabilitar y oscurecer las palas al no ser tu turno*/
+body#gameIA .centerContainer #contenedorSpecialAttack .shovelDisable{
+    pointer-events:none;
+    opacity:0.5;
 }
 
 
