--- a/style.css
+++ b/style.css
@@ -305,16 +305,18 @@ body#gameIA .centerContainer #contenedorSpecialAttack{
     margin-right: auto;
     margin-left: 74%;
     justify-content: right;
+    z-index: 21;
 }
 
 body#gameIA .centerContainer #contenedorSpecialAttack img {
     width: 100px;
     margin: 4px;
     padding: 4%;
+    cursor: pointer;
 }
 
 body#gameIA .centerContainer #contenedorSpecialAttack img[data-selected="true"] {
-    background-color: #b9faf8;
+    background-color: #E398B0;
     border-radius: 16px;
     box-shadow: 0px 5px 15px 2px rgba(0, 0, 0, 0.20);
 }
@@ -322,6 +324,7 @@ body#gameIA .centerContainer #contenedorSpecialAttack img[data-selected="true"] 
 /* desabilitar y oscurecer las palas al no ser tu turno*/
 body#gameIA .centerContainer #contenedorSpecialAttack .shovelDisable{
     pointer-events:none;
+    cursor: not-allowed;
     opacity:0.5;
 }
 
